finish OAS. and redo some api layer logic
