# src/main/java/com/odian/moviesearch/api/model/PersonItemDTO.java
@@ -1,0 +1,8 @@
+package com.odian.moviesearch.api.model;
+
+public record PersonItemDTO(
+        Long id,
+        String name,
+        String photoUrl
+) {
+}
