# src/main/java/com/odian/moviesearch/core/model/Person.java
@@ -2,16 +2,22 @@ package com.odian.moviesearch.core.model;
 
 
 import com.odian.moviesearch.core.model.enums.MovieRole;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 
 import java.time.LocalDate;
 import java.util.List;
 
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
 public class Person {
     private Long id;
     private String name;
     private String biography;
     private Country country;
     private LocalDate birthDate;
-    private Media photoUrl;
+    private Media photo;
     private List<MovieRole> roles;
 }
