# src/main/java/com/odian/moviesearch/core/services/validators/PeoplePageableValidator.java
@@ -1,18 +1,15 @@
 package com.odian.moviesearch.core.services.validators;
 
-
 import java.util.Set;
 
-public class MoviePageableValidator extends PageableValidator {
-
+public class PeoplePageableValidator extends PageableValidator {
     @Override
     public Set<String> getValidSortBy() {
-        return Set.of("name");
+        return Set.of();
     }
 
     @Override
     public Set<String> getValidParameterNames() {
-        return Set.of("name", "countryId");
+        return Set.of();
     }
-
 }
